--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ html{
 }
 
 body{
-    background-color:var(--Dark-Slate-Grey);
+    background-color:var(--Charcoal-Grey);
 }
 h1{
     font-size: 2rem;
